change markdown engine to kramdown, then change theme to hooligan

--- a/_config.yml
+++ b/_config.yml
@@ -6,13 +6,16 @@ exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
 auto: true
 pygments: true
 
-markdown: rdiscount
+markdown: kramdown
+# markdown: rdiscount
+kramdown:
+  use_coderay: true
 
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
 title :  fly2best
-tagline: test tag
+tagline: 汇聚娟娟细流
 author :
   name : fly2best
   email : fly2best@gmail.com
