--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ kramdown:
 # so be sure to set them if your theme uses them.
 #
 title :  fly2best
-tagline: 汇聚娟娟细流
+tagline: 汇聚涓涓细流
 author :
   name : fly2best
   email : fly2best@gmail.com
